<?xml version="1.0"?>
<package format="2">
  <name>ynoise_filter</name>
  <version>0.0.0</version>
  <description>The ynoise filter for DVS camera</description>
  <maintainer email="abdulla.ayyad96@gmail.com">Abdulla Ayyad</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>camera_info_manager</depend>
  <depend>nodelet</depend>

  <export>

  </export>

</package>
